@@ -2,7 +2,7 @@
 	\file "art_object_instance_alias.h"
 	Class declarations for aliases.
 	Definition of implementation is in "art_object_instance_collection.tcc"
-	$Id: art_object_instance_alias.h,v 1.1.4.3 2005/02/24 19:34:39 fang Exp $
+	$Id: art_object_instance_alias.h,v 1.1.4.4 2005/02/24 20:35:11 fang Exp $
  */
 
 #ifndef	__ART_OBJECT_INSTANCE_ALIAS_H__
@@ -174,7 +174,7 @@ typedef	ring_node_derived<instance_alias_info>
 template <class Tag>
 ostream&
 operator << (ostream&,
-	const typename instance_alias_info<Tag>::instance_alias_base&);
+	const typename instance_alias_info<Tag>::instance_alias_base_type&);
 
 //-----------------------------------------------------------------------------
 #define	INSTANCE_ALIAS_TEMPLATE_SIGNATURE				\
@@ -190,7 +190,7 @@ template <class Tag>
 instance_alias<Tag,0>
 
 /**
-	Extends a instance_alias_base with a multikey, to be used
+	Extends a instance_alias_base_type with a multikey, to be used
 	in a set.  
 
 	Note: Don't derive from multikey_set_element.  
@@ -200,22 +200,26 @@ instance_alias<Tag,0>
 INSTANCE_ALIAS_TEMPLATE_SIGNATURE
 class instance_alias :
 	public multikey_set_element_derived<D, pint_value_type, 
-		typename instance_alias_info<Tag>::instance_alias_base> {
+		typename instance_alias_info<Tag>::instance_alias_base_type> {
 	typedef	INSTANCE_ALIAS_CLASS			this_type;
 public:
 	typedef	multikey_set_element_derived<D, pint_value_type, 
-		typename instance_alias_info<Tag>::instance_alias_base>
+		typename class_traits<Tag>::instance_alias_base_type>
 							parent_type;
 	/**
 		Dimension-generic container type.  
 	 */
 	typedef	typename class_traits<Tag>::instance_collection_generic_type
-						instance_collection_generic_type;
+					instance_collection_generic_type;
 	/**
 		Dimension-specific container type, 
 		should be sub-type of instance_collection_generic_type;
 	 */
-	typedef	instance_array<Tag,D>			container_type;
+	typedef	typename class_traits<Tag>::instance_array<D>::type
+							container_type;
+
+	typedef	typename class_traits<Tag>::instance_alias_base_type
+					instance_alias_base_type;
 private:
 	/**
 		grandparent_type is maplikeset_element_derived.
@@ -299,13 +303,19 @@ public:
  */
 KEYLESS_INSTANCE_ALIAS_TEMPLATE_SIGNATURE
 class instance_alias<Tag,0> :
-	public instance_alias_info<Tag>::instance_alias_base {
+	public instance_alias_info<Tag>::instance_alias_base_type {
 private:
-	typedef	instance_alias<Tag,0>			this_type;
-	typedef	typename instance_alias_info<Tag>::instance_alias_base
+	typedef	KEYLESS_INSTANCE_ALIAS_CLASS		this_type;
+	typedef	typename class_traits<Tag>::instance_alias_base_type
 							parent_type;
 public:
-	typedef	instance_array<Tag,0>			container_type;
+	typedef	typename class_traits<Tag>::instance_alias_base_type
+					instance_alias_base_type;
+	typedef	typename class_traits<Tag>::instance_collection_generic_type
+					instance_collection_generic_type;
+//	typedef	instance_array<Tag,0>			container_type;
+	typedef	typename class_traits<Tag>::instance_array<0>::type
+							container_type;
 public:
 	~instance_alias();
 
@@ -322,7 +332,7 @@ public:
 
 public:
 	PERSISTENT_METHODS_DECLARATIONS_NO_ALLOC
-};	// end class instance_alias<0>
+};	// end class instance_alias<Tag,0>
 
 //=============================================================================
 }	// end namespace entity
